fixed portfolio thumbnail spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,6 +101,10 @@ a:hover {
     color: #fff;
     text-decoration-line: none
 }
+#navVert li:hover {
+    background-color: #666;
+}
+/* main styles */
 main {
     position: relative;
     margin-top: 84px;
@@ -109,7 +113,7 @@ main {
     padding: 40px;
     height: auto;
     clear: both;
-    margin-bottom: 30px;
+    /*margin-bottom: 30px;*/
 }
 .clearfix::after {
     content: "";
@@ -129,6 +133,9 @@ h2 {
 p {
     line-height: 160%;
     padding-bottom: 20px;
+}
+p:last-child {
+    padding-bottom: 0;
 }
 .imgBox {
     float: left;
@@ -187,7 +194,7 @@ textarea {
 .grid-container {
     display: grid;
     gap: 20px;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .thumbnailLabel {
@@ -195,7 +202,7 @@ textarea {
     color: #fff;
     text-align: center;
     padding: 5px 10px;
-    margin-bottom: 0;
+    margin: 0;
     position: relative;
     bottom: 3.5rem;
     z-index: 50;
@@ -203,7 +210,7 @@ textarea {
 .thumbnailLabel a {
     text-decoration-line: none;
 }
-
+/* media queries */
 @media screen and (max-width: 980px) {
     .container {
         width: 70%;
